--- a/Home.html
+++ b/Home.html
@@ -8,19 +8,17 @@
         <title>🌵 To Do Lists</title>
 
         <script src="https://kit.fontawesome.com/61ada1e52f.js" crossorigin="anonymous"></script>
-        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 
+        <script src="./assets/jquery.min.js"></script>
+        <!-- <script src="./assets/jquery.min.map"></script> -->
         <script src="./assets/sweetalert2.all.min.js"></script>
         <script src="./assets/index.min.js"></script>
         <script defer src="./assets/alpine.min.js"></script>
 
-        <script src="./Home.js "></script>
-        <script src="./Home.css "></script>
-
-        <script src="./assets/jquery.min.js"></script>
-        <script src="./assets/jquery.min.js.map"></script>
+        <script src="./Home.js"></script>
 
         <link rel="stylesheet" href="./assets/bootstrap.min.css">
+        <link rel="stylesheet" href="./Home.css">
 
         <style>
             @import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');
@@ -31,7 +29,47 @@
     </head>
 
     <body>
-        <h1>Home</h1>
+        <div class="row">
+            <div class="col-4"></div>
+            <div class="col-4 d-flex flex-column justify-content-center align-items-center" x-data="{list: ListComponent('🌵 To Do List')}">
+                <div id="list-container">
+                    <h1 x-text="list.name" class="text-center"></h1>
+                    <div x-data="{ newTodo: '' }">
+                        <div>
+                            <template x-if="list.todos.length == 0">
+								<p class="text-center">To Do list is empty.</p>
+							</template>
+                            <template x-if="list.todos.length > 0">
+								<ul class="d-flex flex-column justify-content-center align-items-center">
+									<template x-for="todo in list.todos">
+										<li>
+											<span x-text="todo.text"></span>
+											<a @click="list.deleteTodo(todo.ID)">
+												<i class="fa-solid fa-x delete"></i>
+											</a>
+										</li>
+									</template>
+                            </ul>
+                            </template>
+                            <div class="d-flex flex-row justify-content-center align-items-center">
+                                <div class="p-1">
+                                    <input class="p-1" type="text" x-model="newTodo" placeholder="new to do..." required />
+                                </div>
+                                <div class="p-1">
+                                    <a class="btn btn-primary" @click="list.addTodo(newTodo)">
+                                        <i class="fa-solid fa-plus"></i>
+                                    </a>
+                                </div>
+                            </div>
+                            <hr>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="col-4"></div>
+        </div>
+        </template>
+        </div>
     </body>
 
 </html>
