ListComponent em CommonJS, testes do ListComponent, browserify e organização dos arquivos

--- a/Home.html
+++ b/Home.html
@@ -8,16 +8,13 @@
         <title>🌵 To Do Lists</title>
 
         <script src="https://kit.fontawesome.com/61ada1e52f.js" crossorigin="anonymous"></script>
+        <script src="./assets/js/jquery.min.js"></script>
+        <script src="./assets/js/sweetalert2.all.min.js"></script>
+        <script src="./assets/js/index.min.js"></script>
+        <script defer src="./assets/js/alpine.min.js"></script>
+        <script src="./assets/js/home.bundle.js"></script>
 
-        <script src="./assets/jquery.min.js"></script>
-        <!-- <script src="./assets/jquery.min.map"></script> -->
-        <script src="./assets/sweetalert2.all.min.js"></script>
-        <script src="./assets/index.min.js"></script>
-        <script defer src="./assets/alpine.min.js"></script>
-
-        <script src="./Home.js"></script>
-
-        <link rel="stylesheet" href="./assets/bootstrap.min.css">
+        <link rel="stylesheet" href="./assets/js/bootstrap.min.css">
         <link rel="stylesheet" href="./Home.css">
 
         <style>
