--- a/Home.html
+++ b/Home.html
@@ -31,7 +31,7 @@
         <div>
             <div class="row">
                 <div class="col-4"></div>
-                <div class="col-4 d-flex flex-column justify-content-center align-items-center">
+                <div class="col-12 col-md-4 d-flex flex-column justify-content-center align-items-center">
                     <template x-if="home.lists.length == 0">
                         <h1 class="text-center">Crie sua primeira lista!</h1>
                     </template>
@@ -66,10 +66,17 @@
                                         <input class="p-1" type="text" x-model="newTodo" placeholder="new to do..."
                                             required />
                                     </div>
-                                    <div class="p-1">
-                                        <a class="btn btn-primary" @click="list.addTodo(newTodo)">
-                                            <i class="fa-solid fa-plus"></i>
-                                        </a>
+                                    <div class="d-flex flex-row justify-content-center align-items-center">
+                                        <span class="m-1">
+                                            <a class="btn btn-primary" @click="list.addTodo(newTodo)">
+                                                <i class="fa-solid fa-plus"></i>
+                                            </a>
+                                        </span>
+                                        <span class="m-1">
+                                            <a class="btn btn-warning" @click="list.randomTodo()">
+                                                <i class="fa-regular fa-lightbulb"></i>
+                                            </a>
+                                        </span>
                                     </div>
                                 </div>
                             </div>
