Ajuste no tamanho do campo do To Do

--- a/Home.html
+++ b/Home.html
@@ -79,8 +79,8 @@
                                                     </template>
                                                     <div
                                                         class="d-flex flex-row justify-content-center align-items-center">
-                                                        <div class="p-1">
-                                                            <input class="p-1" type="text" x-model="newTodo"
+                                                        <div class="p-1 flex-1">
+                                                            <input class="p-1 w-100" type="text" x-model="newTodo"
                                                                 placeholder="nova tarefa..." required />
                                                         </div>
                                                         <div
