Alerta de confirmacao antes de deletar lista

--- a/Home.html
+++ b/Home.html
@@ -53,7 +53,7 @@
                                                         @focusout="list.updateName($event.target.textContent)"
                                                         contenteditable="true">
                                                     </h2>
-                                                    <a class="p-1" @click="home.deleteList(list.ID)">
+                                                    <a class="p-1" @click="home.confirmDelete(list.ID)">
                                                         <i class="fa-solid fa-x btn-delete-list"></i>
                                                     </a>
                                                 </div>
